		* Resolve MSVC compilation problem with separate strings in GUI
		* Fixes to Windows build
		* Allow compilation with wxCocoa
		* Replace Color.h by new class implementation MuleColour
		* Lower class overhead and user two-level cache for pen/brushes
		* Preferences changes

	lfroen:
		* php prefix for lex/yacc

	Phoenix:
		* Fix for initialization of "resultstr" in cryptopp.m4.

	Stu Redman:
		* Sort DownloadListCtrl on startup
		* Sort source list on opening and add file name to A4AF files

	Vollstrecker:
		* Made possible to deactivate xas
		* Unify copyright lines

	Wuischke:
		* Simplify browser selection
		* Use DoIconize() for dclick on tray icon, too
		* Fix minimizing from tray icon
		* Add option to show chat messages in log

	Special Thanks To:
		* Greek for his contributions to aMule's user interface.

--------------------------------------------------------------------------------

Version 2.2.2 - Whatever comes next.
----------
2008-07-??

	bomj:
		* Patch for alcc to improve usability

	Gaznevada:
		* implement getopt_long in cas for systems which lack it

	GonoszTopi:
		* Fixing denoiser
		* include <sys/types.h> before <regex.h> as by POSIX
		* Fix noinline in crypto for some systems
		* Fix display of ccache option
		* Add sources from search results for new downloads
		* Use output of gdlib-config for gd.h detection
		* Solaris mntent fix
		* Fix NULL pointer dereference
		* Fix for configure not using --with-geo-ip value in library check

	MalaPraxis:
		* Remap colours on Windows
		* Add resources
		* Fix wrong usage of CPath::IsOk which caused an infinite loop on Import
		* Fix wxTempFile usage for compressed IPFilter files

	Phoenix:
		* Removed the dlopen() code from UPnP.cpp.
		* Added the m4 macro to test for libupnp.
		* Updated amule_build_install.sh to work with
		  --with-libupnp-prefix.
		* Changed the UPnP code to allow the use of a service without
		  having successfully subscribed to it. That should be enough